stateDiagram-v2
  NotLogged : NotLogged()
  Login : Login()<br/>action: doLogin()
  NotLogged --> Login : Login(String login\, String password)
  Logged : Logged(User user\, bool isNew)
  Login --> Logged : Success(User user\, bool isNew)
  Failure : Failure(Object error)
  Login --> Failure : Failure(Object error)
  Register : Register()<br/>action: doRegister()
  NotLogged --> Register : Register(String login\, String password)
  Register --> Logged : Success(User user\, bool isNew)
  Register --> Failure : Failure(Object error)
  Logout : Logout()<br/>action: doLogout()
  Logged --> Logout : Logout(User? user)
  Logout --> NotLogged : LoggedOut()
  Failure --> NotLogged : Retry()
  Terminated : Terminated()
  Failure --> Terminated : Exit()
  Logged --> Terminated : Exit()
  NotLogged --> Terminated : Exit()
  Login --> NotLogged : Cancel()
  Register --> NotLogged : Cancel()
  Logout --> NotLogged : Cancel()
